// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`splitOnHeader splitOnHeader:false 1`] = `
"@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
@prefix schema: <http://schema.org/> .
@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .
@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .
@prefix ex: <http://example.org/> .
@prefix dot: <http://dottriples.org/> .
@prefix mark: <http://markdown.org/> .

ex:file dot:related <https://example-2.com/>, <https://example-2.com/something>, _:b30, _:b31, _:b32, <http://example.com>, _:b33, _:b34, _:b35, _:b36, <https://example2.com> ;
	<http://my-vault.org/property/has%20image> _:b29 ;
	dot:contains <http://example.org/file/1>, <http://example.org/file/2>, <http://example.org/file/3>, [
		dot:linktext \\"file.md#Alice\\" ;
		dot:tag \\"person\\" ;
		<http://my-vault.org/property/age> \\"37\\" ;
		<http://my-vault.org/property/name> \\"Alice\\" ;
	], [
		dot:linktext \\"file.md#Bob\\" ;
		dot:tag \\"person\\" ;
		<http://my-vault.org/property/age> \\"42\\" ;
		<http://my-vault.org/property/name> \\"Bob\\" ;
	], [
		dot:linktext \\"file.md#Alice\\" ;
		dot:tag \\"person\\" ;
		<http://my-vault.org/property/age> \\"37\\" ;
		<http://my-vault.org/property/name> \\"Alice\\" ;
		schema:name \\"Alice\\" ;
	], [
		dot:linktext \\"file.md#Bob\\" ;
		dot:tag \\"person\\" ;
		<http://my-vault.org/property/age> \\"42\\" ;
		<http://my-vault.org/property/name> \\"Bob\\" ;
		schema:name \\"Bob\\" ;
	], <http://example.org/file/alice>, <http://example.org/file/alison> ;
	<http://my-vault.org/property/description> \\"Section 4\\" ;
	dot:tag \\"Section\\", \\"cats\\", \\"dogs\\", \\"person\\" ;
	<http://my-vault.org/property/number> \\"42\\" ;
	<http://my-vault.org/property/age> \\"42\\", \\"56\\", \\"37\\" ;
	<http://my-vault.org/property/date%20updated> \\"2021-08-05T17:10:34+02:00\\" ;
	<http://my-vault.org/property/one> \\"Two\\", [
		<http://my-vault.org/property/0> \\"Two\\" ;
		<http://my-vault.org/property/1> [
			<http://my-vault.org/property/Three> \\"Other\\" ;
		] ;
	] ;
	<http://my-vault.org/property/inline> \\"field\\" ;
	<http://my-vault.org/property/**Thoughts**> \\"It was decent.\\" ;
	<http://my-vault.org/property/**Rating**> \\"6'\\" ;
	<http://my-vault.org/property/foaf:knows> _:b48, _:b49 ;
	<http://my-vault.org/property/name> \\"Alice\\", \\"Bob\\", \\"Charlie\\" .

<http://example.org/file/1> dot:related _:b37 ;
	dot:linktext \\"file.md#Section\\" ;
	<http://my-vault.org/property/description> \\"Section 1\\" .

<http://example.org/file/2> dot:related _:b38 ;
	dot:linktext \\"file.md#Section\\" ;
	<http://my-vault.org/property/description> \\"Section 2\\" .

<http://example.org/file/3> dot:related _:b39 ;
	dot:linktext \\"file.md#Section\\" ;
	<http://my-vault.org/property/description> \\"Section 3\\" .

<http://my-vault.org/property/subject> <http://my-vault.org/property/inline> \\"field\\" ;
	<http://my-vault.org/property/**Thoughts**> \\"It was decent.\\" ;
	<http://my-vault.org/property/**Rating**> \\"6\\" .

<http://my-vault.org/property/Too> <http://my-vault.org/property/many> \\"inline\\" .

_:b42 <http://my-vault.org/property/foaf:knows> _:b43 .

<http://example.org/file/alice> dot:linktext \\"file.md#Alice\\" ;
	<http://my-vault.org/property/foaf:knows> _:b50, _:b52 ;
	schema:name \\"Alice\\" .

<http://example.org/file/alison> dot:linktext \\"file.md#Alison\\" ;
	<http://my-vault.org/property/foaf:knows> _:b51, _:b53 ;
	schema:name \\"Alison\\" .

"
`;

exports[`splitOnHeader splitOnHeader:true 1`] = `
"@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
@prefix schema: <http://schema.org/> .
@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .
@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .
@prefix ex: <http://example.org/> .
@prefix dot: <http://dottriples.org/> .
@prefix mark: <http://markdown.org/> .

ex:file dot:related <https://example-2.com/>, <https://example-2.com/something>, _:b30, _:b31, _:b32, <http://example.com>, _:b33, _:b34, _:b35, _:b36, <https://example2.com> ;
	<http://my-vault.org/property/has%20image> _:b29 ;
	dot:contains <http://example.org/file/1>, <http://example.org/file/2>, <http://example.org/file/3>, [
		dot:linktext \\"file.md#Alice\\" ;
		dot:tag \\"person\\" ;
		<http://my-vault.org/property/age> \\"37\\" ;
		<http://my-vault.org/property/name> \\"Alice\\" ;
	], [
		dot:linktext \\"file.md#Bob\\" ;
		dot:tag \\"person\\" ;
		<http://my-vault.org/property/age> \\"42\\" ;
		<http://my-vault.org/property/name> \\"Bob\\" ;
	], [
		dot:linktext \\"file.md#Alice\\" ;
		dot:tag \\"person\\" ;
		<http://my-vault.org/property/age> \\"37\\" ;
		<http://my-vault.org/property/name> \\"Alice\\" ;
		schema:name \\"Alice\\" ;
	], [
		dot:linktext \\"file.md#Bob\\" ;
		dot:tag \\"person\\" ;
		<http://my-vault.org/property/age> \\"42\\" ;
		<http://my-vault.org/property/name> \\"Bob\\" ;
		schema:name \\"Bob\\" ;
	], <http://example.org/file/alice>, <http://example.org/file/alison>, [
		dot:linktext \\"file.md#People\\" ;
		dot:contains [
			dot:linktext \\"file.md#Alice\\" ;
			<http://my-vault.org/property/age> \\"37\\" ;
			<http://my-vault.org/property/name> \\"Alice\\" ;
		], [
			dot:linktext \\"file.md#Bob\\" ;
			<http://my-vault.org/property/age> \\"42\\" ;
			<http://my-vault.org/property/name> \\"Bob\\" ;
		], [
			dot:linktext \\"file.md#Charlie\\" ;
			<http://my-vault.org/property/name> \\"Charlie\\" ;
		] ;
	] ;
	<http://my-vault.org/property/description> \\"Section 4\\" ;
	dot:tag \\"Section\\", \\"cats\\", \\"dogs\\", \\"person\\" ;
	<http://my-vault.org/property/number> \\"42\\" ;
	<http://my-vault.org/property/age> \\"42\\", \\"56\\", \\"37\\" ;
	<http://my-vault.org/property/date%20updated> \\"2021-08-05T17:10:34+02:00\\" ;
	<http://my-vault.org/property/one> \\"Two\\", [
		<http://my-vault.org/property/0> \\"Two\\" ;
		<http://my-vault.org/property/1> [
			<http://my-vault.org/property/Three> \\"Other\\" ;
		] ;
	] ;
	<http://my-vault.org/property/inline> \\"field\\" ;
	<http://my-vault.org/property/**Thoughts**> \\"It was decent.\\" ;
	<http://my-vault.org/property/**Rating**> \\"6'\\" ;
	<http://my-vault.org/property/foaf:knows> _:b48, _:b49 ;
	<http://my-vault.org/property/name> \\"Alice\\", \\"Bob\\", \\"Charlie\\" .

<http://example.org/file/1> dot:related _:b37 ;
	dot:linktext \\"file.md#Section\\" ;
	<http://my-vault.org/property/description> \\"Section 1\\" .

<http://example.org/file/2> dot:related _:b38 ;
	dot:linktext \\"file.md#Section\\" ;
	<http://my-vault.org/property/description> \\"Section 2\\" .

<http://example.org/file/3> dot:related _:b39 ;
	dot:linktext \\"file.md#Section\\" ;
	<http://my-vault.org/property/description> \\"Section 3\\" .

<http://my-vault.org/property/subject> <http://my-vault.org/property/inline> \\"field\\" ;
	<http://my-vault.org/property/**Thoughts**> \\"It was decent.\\" ;
	<http://my-vault.org/property/**Rating**> \\"6\\" .

<http://my-vault.org/property/Too> <http://my-vault.org/property/many> \\"inline\\" .

_:b42 <http://my-vault.org/property/foaf:knows> _:b43 .

<http://example.org/file/alice> dot:linktext \\"file.md#Alice\\" ;
	<http://my-vault.org/property/foaf:knows> _:b50, _:b52 ;
	schema:name \\"Alice\\" .

<http://example.org/file/alison> dot:linktext \\"file.md#Alison\\" ;
	<http://my-vault.org/property/foaf:knows> _:b51, _:b53 ;
	schema:name \\"Alison\\" .

"
`;

exports[`splitOnHeader splitOnHeader:true addLabels:true 1`] = `
"@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
@prefix schema: <http://schema.org/> .
@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .
@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .
@prefix ex: <http://example.org/> .
@prefix dot: <http://dottriples.org/> .
@prefix mark: <http://markdown.org/> .

ex:file dot:related <https://example-2.com/>, <https://example-2.com/something>, _:b30, _:b31, _:b32, <http://example.com>, _:b33, _:b34, _:b35, _:b36, <https://example2.com> ;
	<http://my-vault.org/property/has%20image> _:b29 ;
	dot:contains <http://example.org/file/1>, <http://example.org/file/2>, <http://example.org/file/3>, [
		dot:linktext \\"file.md#Alice\\" ;
		dot:tag \\"person\\" ;
		<http://my-vault.org/property/age> \\"37\\" ;
		<http://my-vault.org/property/name> \\"Alice\\" ;
	], [
		dot:linktext \\"file.md#Bob\\" ;
		dot:tag \\"person\\" ;
		<http://my-vault.org/property/age> \\"42\\" ;
		<http://my-vault.org/property/name> \\"Bob\\" ;
	], [
		dot:linktext \\"file.md#Alice\\" ;
		dot:tag \\"person\\" ;
		<http://my-vault.org/property/age> \\"37\\" ;
		<http://my-vault.org/property/name> \\"Alice\\" ;
		schema:name \\"Alice\\" ;
	], [
		dot:linktext \\"file.md#Bob\\" ;
		dot:tag \\"person\\" ;
		<http://my-vault.org/property/age> \\"42\\" ;
		<http://my-vault.org/property/name> \\"Bob\\" ;
		schema:name \\"Bob\\" ;
	], <http://example.org/file/alice>, <http://example.org/file/alison>, [
		dot:linktext \\"file.md#People\\" ;
		dot:contains [
			dot:linktext \\"file.md#Alice\\" ;
			<http://my-vault.org/property/age> \\"37\\" ;
			<http://my-vault.org/property/name> \\"Alice\\" ;
		], [
			dot:linktext \\"file.md#Bob\\" ;
			<http://my-vault.org/property/age> \\"42\\" ;
			<http://my-vault.org/property/name> \\"Bob\\" ;
		], [
			dot:linktext \\"file.md#Charlie\\" ;
			<http://my-vault.org/property/name> \\"Charlie\\" ;
		] ;
	], [
		dot:linktext \\"file.md#People\\" ;
		dot:contains [
			dot:linktext \\"file.md#Alice\\" ;
			<http://my-vault.org/property/age> \\"37\\" ;
			<http://my-vault.org/property/name> \\"Alice\\" ;
			schema:name \\"Alice\\" ;
		], [
			dot:linktext \\"file.md#Bob\\" ;
			<http://my-vault.org/property/age> \\"42\\" ;
			<http://my-vault.org/property/name> \\"Bob\\" ;
			schema:name \\"Bob\\" ;
		], [
			dot:linktext \\"file.md#Charlie\\" ;
			<http://my-vault.org/property/name> \\"Charlie\\" ;
			schema:name \\"Charlie\\" ;
		] ;
		schema:name \\"People\\" ;
	] ;
	<http://my-vault.org/property/description> \\"Section 4\\" ;
	dot:tag \\"Section\\", \\"cats\\", \\"dogs\\", \\"person\\" ;
	<http://my-vault.org/property/number> \\"42\\" ;
	<http://my-vault.org/property/age> \\"42\\", \\"56\\", \\"37\\" ;
	<http://my-vault.org/property/date%20updated> \\"2021-08-05T17:10:34+02:00\\" ;
	<http://my-vault.org/property/one> \\"Two\\", [
		<http://my-vault.org/property/0> \\"Two\\" ;
		<http://my-vault.org/property/1> [
			<http://my-vault.org/property/Three> \\"Other\\" ;
		] ;
	] ;
	<http://my-vault.org/property/inline> \\"field\\" ;
	<http://my-vault.org/property/**Thoughts**> \\"It was decent.\\" ;
	<http://my-vault.org/property/**Rating**> \\"6'\\" ;
	<http://my-vault.org/property/foaf:knows> _:b48, _:b49 ;
	<http://my-vault.org/property/name> \\"Alice\\", \\"Bob\\", \\"Charlie\\" .

<http://example.org/file/1> dot:related _:b37 ;
	dot:linktext \\"file.md#Section\\" ;
	<http://my-vault.org/property/description> \\"Section 1\\" .

<http://example.org/file/2> dot:related _:b38 ;
	dot:linktext \\"file.md#Section\\" ;
	<http://my-vault.org/property/description> \\"Section 2\\" .

<http://example.org/file/3> dot:related _:b39 ;
	dot:linktext \\"file.md#Section\\" ;
	<http://my-vault.org/property/description> \\"Section 3\\" .

<http://my-vault.org/property/subject> <http://my-vault.org/property/inline> \\"field\\" ;
	<http://my-vault.org/property/**Thoughts**> \\"It was decent.\\" ;
	<http://my-vault.org/property/**Rating**> \\"6\\" .

<http://my-vault.org/property/Too> <http://my-vault.org/property/many> \\"inline\\" .

_:b42 <http://my-vault.org/property/foaf:knows> _:b43 .

<http://example.org/file/alice> dot:linktext \\"file.md#Alice\\" ;
	<http://my-vault.org/property/foaf:knows> _:b50, _:b52 ;
	schema:name \\"Alice\\" .

<http://example.org/file/alison> dot:linktext \\"file.md#Alison\\" ;
	<http://my-vault.org/property/foaf:knows> _:b51, _:b53 ;
	schema:name \\"Alison\\" .

"
`;

exports[`splitOnHeader splitOnHeader:true includeWikiPaths:true 1`] = `
"@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
@prefix schema: <http://schema.org/> .
@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .
@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .
@prefix ex: <http://example.org/> .
@prefix dot: <http://dottriples.org/> .
@prefix mark: <http://markdown.org/> .

ex:file dot:related <https://example-2.com/>, <https://example-2.com/something>, _:b30, _:b31, _:b32, <http://example.com>, _:b33, _:b34, _:b35, _:b36, <https://example2.com> ;
	<http://my-vault.org/property/has%20image> _:b29 ;
	dot:contains <http://example.org/file/1>, <http://example.org/file/2>, <http://example.org/file/3>, [
		dot:linktext \\"file.md#Alice\\" ;
		dot:tag \\"person\\" ;
		<http://my-vault.org/property/age> \\"37\\" ;
		<http://my-vault.org/property/name> \\"Alice\\" ;
	], [
		dot:linktext \\"file.md#Bob\\" ;
		dot:tag \\"person\\" ;
		<http://my-vault.org/property/age> \\"42\\" ;
		<http://my-vault.org/property/name> \\"Bob\\" ;
	], [
		dot:linktext \\"file.md#Alice\\" ;
		dot:tag \\"person\\" ;
		<http://my-vault.org/property/age> \\"37\\" ;
		<http://my-vault.org/property/name> \\"Alice\\" ;
		schema:name \\"Alice\\" ;
	], [
		dot:linktext \\"file.md#Bob\\" ;
		dot:tag \\"person\\" ;
		<http://my-vault.org/property/age> \\"42\\" ;
		<http://my-vault.org/property/name> \\"Bob\\" ;
		schema:name \\"Bob\\" ;
	], <http://example.org/file/alice>, <http://example.org/file/alison>, [
		dot:linktext \\"file.md#People\\" ;
		dot:contains [
			dot:linktext \\"file.md#Alice\\" ;
			<http://my-vault.org/property/age> \\"37\\" ;
			<http://my-vault.org/property/name> \\"Alice\\" ;
		], [
			dot:linktext \\"file.md#Bob\\" ;
			<http://my-vault.org/property/age> \\"42\\" ;
			<http://my-vault.org/property/name> \\"Bob\\" ;
		], [
			dot:linktext \\"file.md#Charlie\\" ;
			<http://my-vault.org/property/name> \\"Charlie\\" ;
		] ;
	], [
		dot:linktext \\"file.md#People\\" ;
		dot:contains [
			dot:linktext \\"file.md#Alice\\" ;
			<http://my-vault.org/property/age> \\"37\\" ;
			<http://my-vault.org/property/name> \\"Alice\\" ;
			schema:name \\"Alice\\" ;
		], [
			dot:linktext \\"file.md#Bob\\" ;
			<http://my-vault.org/property/age> \\"42\\" ;
			<http://my-vault.org/property/name> \\"Bob\\" ;
			schema:name \\"Bob\\" ;
		], [
			dot:linktext \\"file.md#Charlie\\" ;
			<http://my-vault.org/property/name> \\"Charlie\\" ;
			schema:name \\"Charlie\\" ;
		] ;
		schema:name \\"People\\" ;
	], [
		dot:linktext \\"file.md#People\\" ;
		dot:contains [
			dot:linktext \\"file.md#Alice\\" ;
			<http://my-vault.org/property/age> \\"37\\" ;
			<http://my-vault.org/property/name> \\"Alice\\" ;
		], [
			dot:linktext \\"file.md#Bob\\" ;
			<http://my-vault.org/property/age> \\"42\\" ;
			<http://my-vault.org/property/name> \\"Bob\\" ;
		], [
			dot:linktext \\"file.md#Charlie\\" ;
			<http://my-vault.org/property/name> \\"Charlie\\" ;
		] ;
	] ;
	<http://my-vault.org/property/description> \\"Section 4\\" ;
	dot:tag \\"Section\\", \\"cats\\", \\"dogs\\", \\"person\\" ;
	<http://my-vault.org/property/number> \\"42\\" ;
	<http://my-vault.org/property/age> \\"42\\", \\"56\\", \\"37\\" ;
	<http://my-vault.org/property/date%20updated> \\"2021-08-05T17:10:34+02:00\\" ;
	<http://my-vault.org/property/one> \\"Two\\", [
		<http://my-vault.org/property/0> \\"Two\\" ;
		<http://my-vault.org/property/1> [
			<http://my-vault.org/property/Three> \\"Other\\" ;
		] ;
	] ;
	<http://my-vault.org/property/inline> \\"field\\" ;
	<http://my-vault.org/property/**Thoughts**> \\"It was decent.\\" ;
	<http://my-vault.org/property/**Rating**> \\"6'\\" ;
	<http://my-vault.org/property/foaf:knows> _:b48, _:b49 ;
	<http://my-vault.org/property/name> \\"Alice\\", \\"Bob\\", \\"Charlie\\" .

<http://example.org/file/1> dot:related _:b37 ;
	dot:linktext \\"file.md#Section\\" ;
	<http://my-vault.org/property/description> \\"Section 1\\" .

<http://example.org/file/2> dot:related _:b38 ;
	dot:linktext \\"file.md#Section\\" ;
	<http://my-vault.org/property/description> \\"Section 2\\" .

<http://example.org/file/3> dot:related _:b39 ;
	dot:linktext \\"file.md#Section\\" ;
	<http://my-vault.org/property/description> \\"Section 3\\" .

<http://my-vault.org/property/subject> <http://my-vault.org/property/inline> \\"field\\" ;
	<http://my-vault.org/property/**Thoughts**> \\"It was decent.\\" ;
	<http://my-vault.org/property/**Rating**> \\"6\\" .

<http://my-vault.org/property/Too> <http://my-vault.org/property/many> \\"inline\\" .

_:b42 <http://my-vault.org/property/foaf:knows> _:b43 .

<http://example.org/file/alice> dot:linktext \\"file.md#Alice\\" ;
	<http://my-vault.org/property/foaf:knows> _:b50, _:b52 ;
	schema:name \\"Alice\\" .

<http://example.org/file/alison> dot:linktext \\"file.md#Alison\\" ;
	<http://my-vault.org/property/foaf:knows> _:b51, _:b53 ;
	schema:name \\"Alison\\" .

"
`;

exports[`splitOnId splitOnId:false 1`] = `
"@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
@prefix schema: <http://schema.org/> .
@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .
@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .
@prefix ex: <http://example.org/> .
@prefix dot: <http://dottriples.org/> .
@prefix mark: <http://markdown.org/> .

ex:file dot:related <https://example-2.com/>, <https://example-2.com/something>, _:b30, _:b31, _:b32, <http://example.com>, _:b33, _:b34, _:b35, _:b36, <https://example2.com> ;
	<http://my-vault.org/property/has%20image> _:b29 ;
	dot:contains <http://example.org/file/1>, <http://example.org/file/2>, <http://example.org/file/3>, [
		dot:linktext \\"file.md#Alice\\" ;
		dot:tag \\"person\\" ;
		<http://my-vault.org/property/age> \\"37\\" ;
		<http://my-vault.org/property/name> \\"Alice\\" ;
	], [
		dot:linktext \\"file.md#Bob\\" ;
		dot:tag \\"person\\" ;
		<http://my-vault.org/property/age> \\"42\\" ;
		<http://my-vault.org/property/name> \\"Bob\\" ;
	], [
		dot:linktext \\"file.md#Alice\\" ;
		dot:tag \\"person\\" ;
		<http://my-vault.org/property/age> \\"37\\" ;
		<http://my-vault.org/property/name> \\"Alice\\" ;
		schema:name \\"Alice\\" ;
	], [
		dot:linktext \\"file.md#Bob\\" ;
		dot:tag \\"person\\" ;
		<http://my-vault.org/property/age> \\"42\\" ;
		<http://my-vault.org/property/name> \\"Bob\\" ;
		schema:name \\"Bob\\" ;
	] ;
	<http://my-vault.org/property/description> \\"Section 4\\" ;
	dot:tag \\"Section\\", \\"cats\\", \\"dogs\\", \\"person\\" ;
	<http://my-vault.org/property/number> \\"42\\" ;
	<http://my-vault.org/property/age> \\"42\\", \\"56\\", \\"37\\" ;
	<http://my-vault.org/property/date%20updated> \\"2021-08-05T17:10:34+02:00\\" ;
	<http://my-vault.org/property/one> \\"Two\\", [
		<http://my-vault.org/property/0> \\"Two\\" ;
		<http://my-vault.org/property/1> [
			<http://my-vault.org/property/Three> \\"Other\\" ;
		] ;
	] ;
	<http://my-vault.org/property/inline> \\"field\\" ;
	<http://my-vault.org/property/**Thoughts**> \\"It was decent.\\" ;
	<http://my-vault.org/property/**Rating**> \\"6'\\" ;
	<http://my-vault.org/property/foaf:knows> _:b48, _:b49 ;
	<http://my-vault.org/property/name> \\"Alice\\", \\"Bob\\", \\"Charlie\\" .

<http://example.org/file/1> dot:related _:b37 ;
	dot:linktext \\"file.md#Section\\" ;
	<http://my-vault.org/property/description> \\"Section 1\\" .

<http://example.org/file/2> dot:related _:b38 ;
	dot:linktext \\"file.md#Section\\" ;
	<http://my-vault.org/property/description> \\"Section 2\\" .

<http://example.org/file/3> dot:related _:b39 ;
	dot:linktext \\"file.md#Section\\" ;
	<http://my-vault.org/property/description> \\"Section 3\\" .

<http://my-vault.org/property/subject> <http://my-vault.org/property/inline> \\"field\\" ;
	<http://my-vault.org/property/**Thoughts**> \\"It was decent.\\" ;
	<http://my-vault.org/property/**Rating**> \\"6\\" .

<http://my-vault.org/property/Too> <http://my-vault.org/property/many> \\"inline\\" .

_:b42 <http://my-vault.org/property/foaf:knows> _:b43 .

"
`;

exports[`splitOnId splitOnId:true 1`] = `
"@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
@prefix schema: <http://schema.org/> .
@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .
@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .
@prefix ex: <http://example.org/> .
@prefix dot: <http://dottriples.org/> .
@prefix mark: <http://markdown.org/> .

ex:file dot:related <https://example-2.com/>, <https://example-2.com/something>, _:b30, _:b31, _:b32, <http://example.com>, _:b33, _:b34, _:b35, _:b36, <https://example2.com> ;
	<http://my-vault.org/property/has%20image> _:b29 ;
	dot:contains <http://example.org/file/1>, <http://example.org/file/2>, <http://example.org/file/3>, [
		dot:linktext \\"file.md#Alice\\" ;
		dot:tag \\"person\\" ;
		<http://my-vault.org/property/age> \\"37\\" ;
		<http://my-vault.org/property/name> \\"Alice\\" ;
	], [
		dot:linktext \\"file.md#Bob\\" ;
		dot:tag \\"person\\" ;
		<http://my-vault.org/property/age> \\"42\\" ;
		<http://my-vault.org/property/name> \\"Bob\\" ;
	], [
		dot:linktext \\"file.md#Alice\\" ;
		dot:tag \\"person\\" ;
		<http://my-vault.org/property/age> \\"37\\" ;
		<http://my-vault.org/property/name> \\"Alice\\" ;
		schema:name \\"Alice\\" ;
	], [
		dot:linktext \\"file.md#Bob\\" ;
		dot:tag \\"person\\" ;
		<http://my-vault.org/property/age> \\"42\\" ;
		<http://my-vault.org/property/name> \\"Bob\\" ;
		schema:name \\"Bob\\" ;
	], <http://example.org/file/alice>, <http://example.org/file/alison> ;
	<http://my-vault.org/property/description> \\"Section 4\\" ;
	dot:tag \\"Section\\", \\"cats\\", \\"dogs\\", \\"person\\" ;
	<http://my-vault.org/property/number> \\"42\\" ;
	<http://my-vault.org/property/age> \\"42\\", \\"56\\", \\"37\\" ;
	<http://my-vault.org/property/date%20updated> \\"2021-08-05T17:10:34+02:00\\" ;
	<http://my-vault.org/property/one> \\"Two\\", [
		<http://my-vault.org/property/0> \\"Two\\" ;
		<http://my-vault.org/property/1> [
			<http://my-vault.org/property/Three> \\"Other\\" ;
		] ;
	] ;
	<http://my-vault.org/property/inline> \\"field\\" ;
	<http://my-vault.org/property/**Thoughts**> \\"It was decent.\\" ;
	<http://my-vault.org/property/**Rating**> \\"6'\\" ;
	<http://my-vault.org/property/foaf:knows> _:b48, _:b49 ;
	<http://my-vault.org/property/name> \\"Alice\\", \\"Bob\\", \\"Charlie\\" .

<http://example.org/file/1> dot:related _:b37 ;
	dot:linktext \\"file.md#Section\\" ;
	<http://my-vault.org/property/description> \\"Section 1\\" .

<http://example.org/file/2> dot:related _:b38 ;
	dot:linktext \\"file.md#Section\\" ;
	<http://my-vault.org/property/description> \\"Section 2\\" .

<http://example.org/file/3> dot:related _:b39 ;
	dot:linktext \\"file.md#Section\\" ;
	<http://my-vault.org/property/description> \\"Section 3\\" .

<http://my-vault.org/property/subject> <http://my-vault.org/property/inline> \\"field\\" ;
	<http://my-vault.org/property/**Thoughts**> \\"It was decent.\\" ;
	<http://my-vault.org/property/**Rating**> \\"6\\" .

<http://my-vault.org/property/Too> <http://my-vault.org/property/many> \\"inline\\" .

_:b42 <http://my-vault.org/property/foaf:knows> _:b43 .

<http://example.org/file/alice> dot:linktext \\"file.md#Alice\\" ;
	<http://my-vault.org/property/foaf:knows> _:b50 .

<http://example.org/file/alison> dot:linktext \\"file.md#Alison\\" ;
	<http://my-vault.org/property/foaf:knows> _:b51 .

"
`;

exports[`splitOnId splitOnId:true addLabels:true 1`] = `
"@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
@prefix schema: <http://schema.org/> .
@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .
@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .
@prefix ex: <http://example.org/> .
@prefix dot: <http://dottriples.org/> .
@prefix mark: <http://markdown.org/> .

ex:file dot:related <https://example-2.com/>, <https://example-2.com/something>, _:b30, _:b31, _:b32, <http://example.com>, _:b33, _:b34, _:b35, _:b36, <https://example2.com> ;
	<http://my-vault.org/property/has%20image> _:b29 ;
	dot:contains <http://example.org/file/1>, <http://example.org/file/2>, <http://example.org/file/3>, [
		dot:linktext \\"file.md#Alice\\" ;
		dot:tag \\"person\\" ;
		<http://my-vault.org/property/age> \\"37\\" ;
		<http://my-vault.org/property/name> \\"Alice\\" ;
	], [
		dot:linktext \\"file.md#Bob\\" ;
		dot:tag \\"person\\" ;
		<http://my-vault.org/property/age> \\"42\\" ;
		<http://my-vault.org/property/name> \\"Bob\\" ;
	], [
		dot:linktext \\"file.md#Alice\\" ;
		dot:tag \\"person\\" ;
		<http://my-vault.org/property/age> \\"37\\" ;
		<http://my-vault.org/property/name> \\"Alice\\" ;
		schema:name \\"Alice\\" ;
	], [
		dot:linktext \\"file.md#Bob\\" ;
		dot:tag \\"person\\" ;
		<http://my-vault.org/property/age> \\"42\\" ;
		<http://my-vault.org/property/name> \\"Bob\\" ;
		schema:name \\"Bob\\" ;
	], <http://example.org/file/alice>, <http://example.org/file/alison> ;
	<http://my-vault.org/property/description> \\"Section 4\\" ;
	dot:tag \\"Section\\", \\"cats\\", \\"dogs\\", \\"person\\" ;
	<http://my-vault.org/property/number> \\"42\\" ;
	<http://my-vault.org/property/age> \\"42\\", \\"56\\", \\"37\\" ;
	<http://my-vault.org/property/date%20updated> \\"2021-08-05T17:10:34+02:00\\" ;
	<http://my-vault.org/property/one> \\"Two\\", [
		<http://my-vault.org/property/0> \\"Two\\" ;
		<http://my-vault.org/property/1> [
			<http://my-vault.org/property/Three> \\"Other\\" ;
		] ;
	] ;
	<http://my-vault.org/property/inline> \\"field\\" ;
	<http://my-vault.org/property/**Thoughts**> \\"It was decent.\\" ;
	<http://my-vault.org/property/**Rating**> \\"6'\\" ;
	<http://my-vault.org/property/foaf:knows> _:b48, _:b49 ;
	<http://my-vault.org/property/name> \\"Alice\\", \\"Bob\\", \\"Charlie\\" .

<http://example.org/file/1> dot:related _:b37 ;
	dot:linktext \\"file.md#Section\\" ;
	<http://my-vault.org/property/description> \\"Section 1\\" .

<http://example.org/file/2> dot:related _:b38 ;
	dot:linktext \\"file.md#Section\\" ;
	<http://my-vault.org/property/description> \\"Section 2\\" .

<http://example.org/file/3> dot:related _:b39 ;
	dot:linktext \\"file.md#Section\\" ;
	<http://my-vault.org/property/description> \\"Section 3\\" .

<http://my-vault.org/property/subject> <http://my-vault.org/property/inline> \\"field\\" ;
	<http://my-vault.org/property/**Thoughts**> \\"It was decent.\\" ;
	<http://my-vault.org/property/**Rating**> \\"6\\" .

<http://my-vault.org/property/Too> <http://my-vault.org/property/many> \\"inline\\" .

_:b42 <http://my-vault.org/property/foaf:knows> _:b43 .

<http://example.org/file/alice> dot:linktext \\"file.md#Alice\\" ;
	<http://my-vault.org/property/foaf:knows> _:b50, _:b52 ;
	schema:name \\"Alice\\" .

<http://example.org/file/alison> dot:linktext \\"file.md#Alison\\" ;
	<http://my-vault.org/property/foaf:knows> _:b51, _:b53 ;
	schema:name \\"Alison\\" .

"
`;

exports[`splitOnTag splitOnTag:false 1`] = `
"@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
@prefix schema: <http://schema.org/> .
@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .
@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .
@prefix ex: <http://example.org/> .
@prefix dot: <http://dottriples.org/> .
@prefix mark: <http://markdown.org/> .

ex:file dot:related <https://example-2.com/>, <https://example-2.com/something>, _:b30, _:b31, _:b32, <http://example.com>, _:b33, _:b34, _:b35, _:b36, <https://example2.com> ;
	<http://my-vault.org/property/has%20image> _:b29 ;
	dot:contains <http://example.org/file/1>, <http://example.org/file/2>, <http://example.org/file/3> ;
	<http://my-vault.org/property/description> \\"Section 4\\" ;
	dot:tag \\"Section\\", \\"cats\\", \\"dogs\\", \\"person\\" ;
	<http://my-vault.org/property/number> \\"42\\" ;
	<http://my-vault.org/property/age> \\"42\\", \\"56\\", \\"37\\" ;
	<http://my-vault.org/property/date%20updated> \\"2021-08-05T17:10:34+02:00\\" ;
	<http://my-vault.org/property/one> \\"Two\\", [
		<http://my-vault.org/property/0> \\"Two\\" ;
		<http://my-vault.org/property/1> [
			<http://my-vault.org/property/Three> \\"Other\\" ;
		] ;
	] ;
	<http://my-vault.org/property/inline> \\"field\\" ;
	<http://my-vault.org/property/**Thoughts**> \\"It was decent.\\" ;
	<http://my-vault.org/property/**Rating**> \\"6'\\" ;
	<http://my-vault.org/property/name> \\"Alice\\", \\"Bob\\", \\"Charlie\\" .

<http://example.org/file/1> dot:related _:b37 ;
	dot:linktext \\"file.md#Section\\" ;
	<http://my-vault.org/property/description> \\"Section 1\\" .

<http://example.org/file/2> dot:related _:b38 ;
	dot:linktext \\"file.md#Section\\" ;
	<http://my-vault.org/property/description> \\"Section 2\\" .

<http://example.org/file/3> dot:related _:b39 ;
	dot:linktext \\"file.md#Section\\" ;
	<http://my-vault.org/property/description> \\"Section 3\\" .

<http://my-vault.org/property/subject> <http://my-vault.org/property/inline> \\"field\\" ;
	<http://my-vault.org/property/**Thoughts**> \\"It was decent.\\" ;
	<http://my-vault.org/property/**Rating**> \\"6\\" .

<http://my-vault.org/property/Too> <http://my-vault.org/property/many> \\"inline\\" .

_:b42 <http://my-vault.org/property/foaf:knows> _:b43 .

"
`;

exports[`splitOnTag splitOnTag:true 1`] = `
"@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
@prefix schema: <http://schema.org/> .
@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .
@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .
@prefix ex: <http://example.org/> .
@prefix dot: <http://dottriples.org/> .
@prefix mark: <http://markdown.org/> .

ex:file dot:related <https://example-2.com/>, <https://example-2.com/something>, _:b30, _:b31, _:b32, <http://example.com>, _:b33, _:b34, _:b35, _:b36, <https://example2.com> ;
	<http://my-vault.org/property/has%20image> _:b29 ;
	dot:contains <http://example.org/file/1>, <http://example.org/file/2>, <http://example.org/file/3>, [
		dot:linktext \\"file.md#Alice\\" ;
		dot:tag \\"person\\" ;
		<http://my-vault.org/property/age> \\"37\\" ;
		<http://my-vault.org/property/name> \\"Alice\\" ;
	], [
		dot:linktext \\"file.md#Bob\\" ;
		dot:tag \\"person\\" ;
		<http://my-vault.org/property/age> \\"42\\" ;
		<http://my-vault.org/property/name> \\"Bob\\" ;
	] ;
	<http://my-vault.org/property/description> \\"Section 4\\" ;
	dot:tag \\"Section\\", \\"cats\\", \\"dogs\\", \\"person\\" ;
	<http://my-vault.org/property/number> \\"42\\" ;
	<http://my-vault.org/property/age> \\"42\\", \\"56\\", \\"37\\" ;
	<http://my-vault.org/property/date%20updated> \\"2021-08-05T17:10:34+02:00\\" ;
	<http://my-vault.org/property/one> \\"Two\\", [
		<http://my-vault.org/property/0> \\"Two\\" ;
		<http://my-vault.org/property/1> [
			<http://my-vault.org/property/Three> \\"Other\\" ;
		] ;
	] ;
	<http://my-vault.org/property/inline> \\"field\\" ;
	<http://my-vault.org/property/**Thoughts**> \\"It was decent.\\" ;
	<http://my-vault.org/property/**Rating**> \\"6'\\" ;
	<http://my-vault.org/property/name> \\"Alice\\", \\"Bob\\", \\"Charlie\\" .

<http://example.org/file/1> dot:related _:b37 ;
	dot:linktext \\"file.md#Section\\" ;
	<http://my-vault.org/property/description> \\"Section 1\\" .

<http://example.org/file/2> dot:related _:b38 ;
	dot:linktext \\"file.md#Section\\" ;
	<http://my-vault.org/property/description> \\"Section 2\\" .

<http://example.org/file/3> dot:related _:b39 ;
	dot:linktext \\"file.md#Section\\" ;
	<http://my-vault.org/property/description> \\"Section 3\\" .

<http://my-vault.org/property/subject> <http://my-vault.org/property/inline> \\"field\\" ;
	<http://my-vault.org/property/**Thoughts**> \\"It was decent.\\" ;
	<http://my-vault.org/property/**Rating**> \\"6\\" .

<http://my-vault.org/property/Too> <http://my-vault.org/property/many> \\"inline\\" .

_:b42 <http://my-vault.org/property/foaf:knows> _:b43 .

"
`;

exports[`splitOnTag splitOnTag:true addLabels:true 1`] = `
"@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
@prefix schema: <http://schema.org/> .
@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .
@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .
@prefix ex: <http://example.org/> .
@prefix dot: <http://dottriples.org/> .
@prefix mark: <http://markdown.org/> .

ex:file dot:related <https://example-2.com/>, <https://example-2.com/something>, _:b30, _:b31, _:b32, <http://example.com>, _:b33, _:b34, _:b35, _:b36, <https://example2.com> ;
	<http://my-vault.org/property/has%20image> _:b29 ;
	dot:contains <http://example.org/file/1>, <http://example.org/file/2>, <http://example.org/file/3>, [
		dot:linktext \\"file.md#Alice\\" ;
		dot:tag \\"person\\" ;
		<http://my-vault.org/property/age> \\"37\\" ;
		<http://my-vault.org/property/name> \\"Alice\\" ;
	], [
		dot:linktext \\"file.md#Bob\\" ;
		dot:tag \\"person\\" ;
		<http://my-vault.org/property/age> \\"42\\" ;
		<http://my-vault.org/property/name> \\"Bob\\" ;
	], [
		dot:linktext \\"file.md#Alice\\" ;
		dot:tag \\"person\\" ;
		<http://my-vault.org/property/age> \\"37\\" ;
		<http://my-vault.org/property/name> \\"Alice\\" ;
		schema:name \\"Alice\\" ;
	], [
		dot:linktext \\"file.md#Bob\\" ;
		dot:tag \\"person\\" ;
		<http://my-vault.org/property/age> \\"42\\" ;
		<http://my-vault.org/property/name> \\"Bob\\" ;
		schema:name \\"Bob\\" ;
	] ;
	<http://my-vault.org/property/description> \\"Section 4\\" ;
	dot:tag \\"Section\\", \\"cats\\", \\"dogs\\", \\"person\\" ;
	<http://my-vault.org/property/number> \\"42\\" ;
	<http://my-vault.org/property/age> \\"42\\", \\"56\\", \\"37\\" ;
	<http://my-vault.org/property/date%20updated> \\"2021-08-05T17:10:34+02:00\\" ;
	<http://my-vault.org/property/one> \\"Two\\", [
		<http://my-vault.org/property/0> \\"Two\\" ;
		<http://my-vault.org/property/1> [
			<http://my-vault.org/property/Three> \\"Other\\" ;
		] ;
	] ;
	<http://my-vault.org/property/inline> \\"field\\" ;
	<http://my-vault.org/property/**Thoughts**> \\"It was decent.\\" ;
	<http://my-vault.org/property/**Rating**> \\"6'\\" ;
	<http://my-vault.org/property/name> \\"Alice\\", \\"Bob\\", \\"Charlie\\" .

<http://example.org/file/1> dot:related _:b37 ;
	dot:linktext \\"file.md#Section\\" ;
	<http://my-vault.org/property/description> \\"Section 1\\" .

<http://example.org/file/2> dot:related _:b38 ;
	dot:linktext \\"file.md#Section\\" ;
	<http://my-vault.org/property/description> \\"Section 2\\" .

<http://example.org/file/3> dot:related _:b39 ;
	dot:linktext \\"file.md#Section\\" ;
	<http://my-vault.org/property/description> \\"Section 3\\" .

<http://my-vault.org/property/subject> <http://my-vault.org/property/inline> \\"field\\" ;
	<http://my-vault.org/property/**Thoughts**> \\"It was decent.\\" ;
	<http://my-vault.org/property/**Rating**> \\"6\\" .

<http://my-vault.org/property/Too> <http://my-vault.org/property/many> \\"inline\\" .

_:b42 <http://my-vault.org/property/foaf:knows> _:b43 .

"
`;

exports[`toRDF BlockIds 1`] = `
"@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
@prefix schema: <http://schema.org/> .
@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .
@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .
@prefix ex: <http://example.org/> .
@prefix dot: <http://dottriples.org/> .
@prefix mark: <http://markdown.org/> .

ex:file dot:related <https://example-2.com/>, <https://example-2.com/something>, _:b30, _:b31, _:b32, <http://example.com>, _:b33, _:b34, _:b35, _:b36, <https://example2.com> ;
	<http://my-vault.org/property/has%20image> _:b29 ;
	dot:contains <http://example.org/file/1>, <http://example.org/file/2>, <http://example.org/file/3> ;
	<http://my-vault.org/property/description> \\"Section 4\\" ;
	dot:tag \\"Section\\" .

<http://example.org/file/1> dot:related _:b37 ;
	dot:linktext \\"file.md#Section\\" ;
	<http://my-vault.org/property/description> \\"Section 1\\" .

<http://example.org/file/2> dot:related _:b38 ;
	dot:linktext \\"file.md#Section\\" ;
	<http://my-vault.org/property/description> \\"Section 2\\" .

<http://example.org/file/3> dot:related _:b39 ;
	dot:linktext \\"file.md#Section\\" ;
	<http://my-vault.org/property/description> \\"Section 3\\" .

"
`;

exports[`toRDF Inline fields 1`] = `
"@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
@prefix schema: <http://schema.org/> .
@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .
@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .
@prefix ex: <http://example.org/> .
@prefix dot: <http://dottriples.org/> .
@prefix mark: <http://markdown.org/> .

ex:file dot:related <https://example-2.com/>, <https://example-2.com/something>, _:b30, _:b31, _:b32, <http://example.com>, _:b33, _:b34, _:b35, _:b36, <https://example2.com> ;
	<http://my-vault.org/property/has%20image> _:b29 ;
	dot:contains <http://example.org/file/1>, <http://example.org/file/2>, <http://example.org/file/3> ;
	<http://my-vault.org/property/description> \\"Section 4\\" ;
	dot:tag \\"Section\\", \\"cats\\", \\"dogs\\" ;
	<http://my-vault.org/property/number> \\"42\\" ;
	<http://my-vault.org/property/age> \\"42\\", \\"56\\" ;
	<http://my-vault.org/property/date%20updated> \\"2021-08-05T17:10:34+02:00\\" ;
	<http://my-vault.org/property/one> \\"Two\\", [
		<http://my-vault.org/property/0> \\"Two\\" ;
		<http://my-vault.org/property/1> [
			<http://my-vault.org/property/Three> \\"Other\\" ;
		] ;
	] ;
	<http://my-vault.org/property/inline> \\"field\\" ;
	<http://my-vault.org/property/**Thoughts**> \\"It was decent.\\" ;
	<http://my-vault.org/property/**Rating**> \\"6'\\" .

<http://example.org/file/1> dot:related _:b37 ;
	dot:linktext \\"file.md#Section\\" ;
	<http://my-vault.org/property/description> \\"Section 1\\" .

<http://example.org/file/2> dot:related _:b38 ;
	dot:linktext \\"file.md#Section\\" ;
	<http://my-vault.org/property/description> \\"Section 2\\" .

<http://example.org/file/3> dot:related _:b39 ;
	dot:linktext \\"file.md#Section\\" ;
	<http://my-vault.org/property/description> \\"Section 3\\" .

<http://my-vault.org/property/subject> <http://my-vault.org/property/inline> \\"field\\" ;
	<http://my-vault.org/property/**Thoughts**> \\"It was decent.\\" ;
	<http://my-vault.org/property/**Rating**> \\"6\\" .

<http://my-vault.org/property/Too> <http://my-vault.org/property/many> \\"inline\\" .

_:b42 <http://my-vault.org/property/foaf:knows> _:b43 .

"
`;

exports[`toRDF Links 1`] = `
"@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
@prefix schema: <http://schema.org/> .
@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .
@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .
@prefix ex: <http://example.org/> .
@prefix dot: <http://dottriples.org/> .
@prefix mark: <http://markdown.org/> .

ex:file dot:related <https://example-2.com/>, <https://example-2.com/something>, _:b30, _:b31, _:b32, <http://example.com>, _:b33, _:b34, _:b35, _:b36, <https://example2.com> ;
	<http://my-vault.org/property/has%20image> _:b29 .

"
`;

exports[`toRDF Outline 1`] = `
"@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
@prefix schema: <http://schema.org/> .
@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .
@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .
@prefix ex: <http://example.org/> .
@prefix dot: <http://dottriples.org/> .
@prefix mark: <http://markdown.org/> .

ex:file dot:related <https://example-2.com/>, <https://example-2.com/something>, _:b30, _:b31, _:b32, <http://example.com>, _:b33, _:b34, _:b35, _:b36, <https://example2.com> ;
	<http://my-vault.org/property/has%20image> _:b29 .

"
`;

exports[`toRDF People 1`] = `
"@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
@prefix schema: <http://schema.org/> .
@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .
@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .
@prefix ex: <http://example.org/> .
@prefix dot: <http://dottriples.org/> .
@prefix mark: <http://markdown.org/> .

ex:file dot:related <https://example-2.com/>, <https://example-2.com/something>, _:b30, _:b31, _:b32, <http://example.com>, _:b33, _:b34, _:b35, _:b36, <https://example2.com> ;
	<http://my-vault.org/property/has%20image> _:b29 ;
	dot:contains <http://example.org/file/1>, <http://example.org/file/2>, <http://example.org/file/3> ;
	<http://my-vault.org/property/description> \\"Section 4\\" ;
	dot:tag \\"Section\\" ;
	<http://my-vault.org/property/number> \\"42\\" ;
	<http://my-vault.org/property/age> \\"42\\", \\"56\\" .

<http://example.org/file/1> dot:related _:b37 ;
	dot:linktext \\"file.md#Section\\" ;
	<http://my-vault.org/property/description> \\"Section 1\\" .

<http://example.org/file/2> dot:related _:b38 ;
	dot:linktext \\"file.md#Section\\" ;
	<http://my-vault.org/property/description> \\"Section 2\\" .

<http://example.org/file/3> dot:related _:b39 ;
	dot:linktext \\"file.md#Section\\" ;
	<http://my-vault.org/property/description> \\"Section 3\\" .

"
`;

exports[`toRDF YAML-like 1`] = `
"@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
@prefix schema: <http://schema.org/> .
@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .
@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .
@prefix ex: <http://example.org/> .
@prefix dot: <http://dottriples.org/> .
@prefix mark: <http://markdown.org/> .

ex:file dot:related <https://example-2.com/>, <https://example-2.com/something> .

"
`;

exports[`toRDF Yaml 1`] = `
"@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
@prefix schema: <http://schema.org/> .
@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .
@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .
@prefix ex: <http://example.org/> .
@prefix dot: <http://dottriples.org/> .
@prefix mark: <http://markdown.org/> .

ex:file dot:related <https://example-2.com/>, <https://example-2.com/something>, _:b30, _:b31, _:b32, <http://example.com>, _:b33, _:b34, _:b35, _:b36, <https://example2.com> ;
	<http://my-vault.org/property/has%20image> _:b29 ;
	dot:contains <http://example.org/file/1>, <http://example.org/file/2>, <http://example.org/file/3> ;
	<http://my-vault.org/property/description> \\"Section 4\\" ;
	dot:tag \\"Section\\", \\"cats\\", \\"dogs\\" ;
	<http://my-vault.org/property/number> \\"42\\" ;
	<http://my-vault.org/property/age> \\"42\\", \\"56\\" ;
	<http://my-vault.org/property/date%20updated> \\"2021-08-05T17:10:34+02:00\\" ;
	<http://my-vault.org/property/one> \\"Two\\", [
		<http://my-vault.org/property/0> \\"Two\\" ;
		<http://my-vault.org/property/1> [
			<http://my-vault.org/property/Three> \\"Other\\" ;
		] ;
	] .

<http://example.org/file/1> dot:related _:b37 ;
	dot:linktext \\"file.md#Section\\" ;
	<http://my-vault.org/property/description> \\"Section 1\\" .

<http://example.org/file/2> dot:related _:b38 ;
	dot:linktext \\"file.md#Section\\" ;
	<http://my-vault.org/property/description> \\"Section 2\\" .

<http://example.org/file/3> dot:related _:b39 ;
	dot:linktext \\"file.md#Section\\" ;
	<http://my-vault.org/property/description> \\"Section 3\\" .

"
`;

exports[`toRDF code fence 1`] = `
"@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .
@prefix schema: <http://schema.org/> .
@prefix xsd: <http://www.w3.org/2001/XMLSchema#> .
@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .
@prefix ex: <http://example.org/> .
@prefix dot: <http://dottriples.org/> .
@prefix mark: <http://markdown.org/> .

ex:file dot:related <https://example-2.com/>, <https://example-2.com/something> .

"
`;
